<resources>
    <string name="app_name">Kampus-KITA</string>
    <string name="btn_lokasi">Lokasi Kampus</string>
    <string name="btn_profil">Daftar Kampus</string>
    <string name="btn_tentang">Tentang Kampus-KITA</string>
    <string name="title_activity_maps">Map</string>
    <string name="textawal">Bandung merupakan salah satu kota yang menjadi tujuan para pelajar untuk melanjutkan pendidikannya ke jenjang perguruan tinggi. Hal tersebut dibuktikan dengan banyaknya perguruan tinggi negeri. Salah satunya adalah Institut Teknologi Bandung yang sudah terkenal kualitas hingga ke mancanegara.</string>
    <string name="textkedua">Bandung selain memiliki banyak PTN yang berkualitas, terdapat juga PTS berkualitas dengan berbagai kelompok keilmuan. Sekolah tinggi, politeknik, akademi, institut dengan bidang keilmuan teknologi, kesehatan, administrasi, dll. Jenjang pendidikan yang lengkap dimulai dari D3, S1 hingga pasca sarjana. Salah satu contohnya Universitas Widyatama yang menjadi PTS dengan kualitas pendidikan dan lulusannya yang baik.</string>
    <string name="textketiga">Aplikasi Kampus-KITA hadir untuk memberi solusi kepada pengguna yang kesulitan untuk dalam menemukan lokasi PTN dan PTS di Kota Bandung. Sebenarnya sudah terdapat di Google maps, namun data yang diberikan terkadang kurang spesifik dengan yang pengguna cari, semoga dengan adanya aplikasi ini mampu memberi manfaat yang besar terutama untuk calon mahasiswa dari luar Bandung.</string>
    <string name="textkeempat">1. Navigasi Lokasi Kampus</string>
    <string name="textkelima">Menampilkan marker maps PTN dan PTS, icon toga biru untuk PTN dan icon toga kuning untuk PTS.</string>
    <string name="textkeenam">2. Navigasi Daftar Kampus</string>
    <string name="textketujuh">Menampilkan detail daftar PTN dan PTS seperti alamat dan kontak.</string>
</resources>
