<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.viqi.kampuskita.ActivityTentang">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<TextView-->
            <!--android:id="@+id/textViewjudul"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:paddingTop="10dp"-->
            <!--android:text="Kampus-KITA"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="24dp"-->
            <!--android:textStyle="bold" />-->

        <ImageView
            android:id="@+id/gambarptn"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/itb" />

        <TextView
            android:id="@+id/textptn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gambarptn"
            android:text="@string/textawal"
            android:textAlignment="center"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/gambarpts"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textptn"
            android:paddingTop="10dp"
            android:src="@drawable/widyatama" />

        <TextView
            android:id="@+id/textpts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gambarpts"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/textkedua"
            android:textAlignment="center"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/ssmap"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textpts"
            android:paddingTop="20dp"
            android:src="@drawable/ssmap" />

        <TextView
            android:id="@+id/textaplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ssmap"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/textketiga"
            android:textAlignment="center"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textjdlmenuutama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textaplikasi"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/textkeempat"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textdetailutama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textjdlmenuutama"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/textkelima"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textjdlmenukedua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textdetailutama"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/textkeenam"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textdetailkedua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textjdlmenukedua"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/textketujuh"
            android:textSize="20dp" />

    </RelativeLayout>

</ScrollView>
