<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.viqi.kampuskita.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear1" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/lokasi"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_school"
            android:onClick="btnLokasi"
            android:text="@string/btn_lokasi"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profil"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_notebook"
            android:onClick="btnProfil"
            android:text="@string/btn_profil"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tentang"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_light"
            android:onClick="btnTentang"
            android:text="@string/btn_tentang"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lasut Production"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
